Added arts to repo

--- a/documentation/Архитектура.html
+++ b/documentation/Архитектура.html
@@ -1033,6 +1033,38 @@ H=z*h;</pre>
 Базовый класс <code>Menu</code> определяет основные методы - по добавлению, удалению и взаимодействию с элементами меню (<code>MenuItem</code>), а также метод <code>getStyle()</code> и перечисление <code>Style</code>, задающее возможные стили отрисовки. Его наследники - <code>MainMenu</code>, <code>PauseMenu</code>, <code>OptionsMenu</code>, <code>ProfileMenu</code>, etc. - используют эти методы для наполнения себя содержимым, а также определяют логику поведения команд, которые эти меню предоставляют.<br />
 Базовый класс <code>MenuItem</code> определяет общий пункт меню, не привязанный к конкретному стилю отрисовки. От этого класса наследуются несколько ветвей классов, соответствующих разным стилям отрисовки - им дают начало классы <code>MainMenuItem</code>, <code>IngameMenuItem</code>, etc. Они, в свою очередь, не трогают какие-либо правила взаимодействия элементов меню с пользователем и прочую логику, но полностью определяют свою отрисовку.<br />
 Если требуется создать какой-то специфичный подкласс <code>MenuItem</code>, например, <code>CheckableMenuItem</code> (пункт меню с устанавливаемым флажком), и использовать его, скажем, в нескольких меню со стилями отрисовки <code>MAIN_MENU</code> у одних и <code>INGAME_MENU</code> у других, то создаются два разных класса, соответственно, <code>MMCheckableMenuItem</code> и <code>IGCheckableItem</code>, каждый из которых реализует требуемую логику и доопределяет отрисовку нужным образом, и затем используются в меню соответствующих стилей.
+<h2>Составные изображения и спрайты</h2>
+Для стандартизации доступа к суб-изображениям в спрайтах, вводятся следующие правила:<br />
+(для спрайтов башен/жуков):
+<ul>
+<li>спрайты, содержащие анимацию, выполняются с несколькими кадрами как по высоте, так и по ширине;</li>
+<li>изображения поворота распологаются в следующем порядке (от первого к последнему): сначала идёт изображение объекта, ориентированного строго влево, каждое последующее изображение показывает объект, повёрнутый на минимально возможный угол по часовой стрелке относительно предыдущего;</li>
+<li>кадры анимации в прямой последовательности располагаются слева направо;</li>
+<li>изображения поворота располагаются сверху (от первого) вниз (к последнему);</li>
+<li>любой отдельно взятый горизонтальный ряд мульти-изображения содержит анимацию для объекта, повёрнутого на один и тот же угол;</li>
+</ul>
+(для спрайтов-тайловых карт):
+<ul>
+<li>тайловые карты создаются для каждого окружения (т.е. совокупности уровней, происходящих в одной местности) в количестве одна штука;</li>
+<li>тайловые карты имеют размер 256х128 пикселей (8х4 ячеек по 32х32 пикселей каждая);</li>
+<li>верхний ряд тайловой карты содержит <i>проходимые</i> тайлы;</li>
+<li>второй сверху ряд содержит тайлы с участками дороги в следующем порядке:
+	<ol>
+	<li>горизонтальная дорога;</li>
+	<li>вертикальная дорога;</li>
+	<li>"правый нижний" поворот;</li>
+	<li>"левый нижний" поворот;</li>
+	<li>"левый верхний" поворот;</li>
+	<li>"правый верхний" поворот;</li>
+	<li>дополнительное изображение горизонтальной дороги;</li>
+	<li>дополнительное изображение вертикальной дороги;</li>
+	</ol>
+</li>
+<li>третий ряд сверху содержит <i>непроходимые</i> тайлы;</li>
+<li>нижний ряд используется для <i>дополнительных</i> тайлов;</li>
+</ul>
+Под <i>проходимыми</i>/<i>непроходимыми</i> тайлами имеются ввиду соответственно тайлы, на которые можно поставить башню и тайлы, на которых не может стоять башня. Очевидно, например, что тайлы, содержащие дорогу, являются непроходимыми.<br />
+Место для <i>дополнительных</i> тайлов на тайловой служит для хранения различных тайлов в различных картах, но при этом для всех тайлов, стоящих на этом месте, смысл (т.е. проходимость, направление и т.д.) должен оставаться неизменными.
 
 </div>
 <script>
